@@ -1,4 +1,4 @@
-<%= render partial: 'layouts/per_page', locals: { type: 'applicants', per_page: 40 } %>
+<%= render partial: 'layouts/per_page', locals: { type: 'applicants', per_page: 40, object_count: @applicant_count } %>
 
 <table class="table table-striped table-bordered" style="width:100%;" id="thetable" cellspacing="0" cellspacing="0" cellpadding="0" border="0">
   <thead>
