@@ -1,4 +1,4 @@
-<%= render partial: 'layouts/per_page', locals: { type: 'preceptors', per_page: 40 } %>
+<%= render partial: 'layouts/per_page', locals: { type: 'preceptors', per_page: 40, object_count: @preceptor_count } %>
 
 <table class="table table-striped table-bordered" style="width:100%">
   <thead>
